--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
       test-on-borrow: true
     username: root
     password: toor
-    url: jdbc:h2:file:./java_web_info
+    url: jdbc:h2:file:./db/announcements_base
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
